css/responsive.css
@media (min-width: 768px) and (max-width:980px){
    .main-logo-in-mobile{
        width:160px;
        float:left;
    }
    .nav-ul {
        float:right;
    }

    .navbar-nav li>a {
        font-size:14px;
        
    }
    #navbar{
        margin-top:30px;
    }
    .main-logo-in-mobile{
        width:120px;
        max-height:100px;
        margin:5px;

    }

}
@media(max-width:768px){
    .main-logo-in-mobile{
        width:110px;
        max-height:100px;
        margin:5px;

    }
    #navbar ul{
        width:100%;
           }
    .dropdwon{
        width:100%;
    }

    .nav-collapsed{
      margin-top:18px;
    }
    .navbar-toggle{
        background:#ddd;
        margin-top:22px;
        margin-right:22px;
    }
    .navbar-header{
      border-bottom:1px solid #333;
    }
    #navbar{
       max-height:800px !important;
        background:#ccc;
    }

    .nav-ul li{
      margin:10px;
    }

    .main-nav li>a{
        padding-left:45px;
        text-align:left;

    }
    .dropdown-menu>li>a{
        padding-left:100px !important;
        margin-top:-5px;
    }
    .navbar .navbar-collapse {

    }
}

